--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Modular Polygon</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo"><a href="/">Modular Polygon</a></div>
+    </header>
+    <main>
+        <div class="content">
+            <div class="text">Welcome to Modular Polygon.</div>
+        </div>
+    </main>
 </body>
 </html>
